--- a/style.css
+++ b/style.css
@@ -70,3 +70,11 @@ body {
   text-align: center;
   padding: 8px;
 }
+.topic-content td > a {
+  text-decoration: none;
+  color: #302906;
+}
+.topic-content td > a:hover{
+  text-decoration: underline;
+  color:#0048ff ;
+}
